--- a/index.html
+++ b/index.html
@@ -380,7 +380,39 @@
 	</div>	
 </section>
 	
-	<section id="sec-form">
+	<section id="sec-carousel">
+	<div class="container">
+		<div class="app-carousel owl-carousel">
+				<div class="single-shot">
+            		<i class="icon-quote"></i>
+            		<p>
+              i am alone,  and feel the charm of existence in this spot, which was <br> created for the bliss os souls like mine.
+            		</p>
+            		<h4>Jack Woods</h4>
+            		<h5>SOMECOMPANY INC, CEO</h5>
+          		</div>
+			
+				<div class="single-shot">
+            		<i class="icon-quote"></i>
+            		<p>
+              I should be incapable of drawing a single stroke at the present <br> moment; and yet i feel that i never was a greater artist than now.
+            		</p>
+            		<h4>Jim Stone</h4>
+            		<h5>SOMECOMPANY INC, CEO</h5>
+          		</div>
+				<div class="single-shot">
+            		<i class="icon-quote"></i>
+            		<p>
+              I am so happy, my dear friend, so absorbed in the exquisite sense of <br> mere tranquil existence, that i neglet my talent.
+            		</p>
+            		<h4>Adele Snow</h4>
+            		<h5>SOMECOMPANY INC, CEO</h5>
+          		</div> 
+		</div>
+	</div>
+</section>
+	
+	<section id="sec-form" class="section">
 		<div class="container">
 			<h1>Contact us</h1>
 			<div class="row">
